@@ -16,7 +16,7 @@
   canPatrol=0;
   CanStop=0;
   category=AIR;
-  useSmoothMesh=0;
+  useSmoothMesh=1;
   cruiseAlt=1000;
   [customParams] {
     cruise_missile_accuracy=400;
