@@ -1,0 +1,64 @@
+[unitinfo] {
+  unitname=GERNebelwerfer_Stationary;
+  name=Dug-In Nebelwerfer 41;
+  description=Stationary Rocket Artillery;
+  activateWhenBuilt=1;
+  airSightDistance=2500;
+  buildCostEnergy=0;
+  buildCostMetal=4300;
+  buildingGroundDecalSizeX=5;
+  buildingGroundDecalSizeY=5;
+  buildingGroundDecalType=Dirt2.dds;
+  buildTime=4300;
+  category=DEPLOYED;
+  corpse=GERNebelwerfer_Destroyed;
+  [customParams] {
+    defaultMove=1;
+    feartarget=1;
+    lowammolevel=1;
+    maxammo=1;
+    weaponcost=360;
+    weaponswithammo=1;
+  }
+  flankingBonusDir=0.0 0.0 1.0;
+  flankingBonusMax=1.25;
+  flankingBonusMin=0.75;
+  flankingBonusMode=1;
+  footprintX=3;
+  footprintZ=3;
+  iconType=artillery;
+  maxDamage=750;
+  maxSlope=15;
+  maxWaterDepth=0;
+  noAutoFire=1;
+  noChaseCategory=FLAG AIR MINE;
+  objectName=GERNebelwerfer_Stationary.S3O;
+  onoffable=1;
+  radarDistanceJam=0;
+  [sfxtypes] {
+    explosionGenerator0=custom:SMOKEPUFF_GPL_FX;
+    explosionGenerator1=custom:PLACEHOLDER_EFFECT01;
+    explosionGenerator2=custom:PLACEHOLDER_EFFECT02;
+    explosionGenerator3=custom:PLACEHOLDER_EFFECT03;
+    explosionGenerator4=custom:PLACEHOLDER_EFFECT04;
+    explosionGenerator5=custom:PLACEHOLDER_EFFECT05;
+    explosionGenerator6=custom:PLACEHOLDER_EFFECT06;
+    explosionGenerator7=custom:MG_MUZZLEFLASH;
+    explosionGenerator8=custom:dirt_backblast;
+  }
+  showNanoFrame=0;
+  side=GBR;
+  sightDistance=701;
+  smoothAnim=0;
+  soundcategory=GERInf;
+  stealth=1;
+  useBuildingGroundDecal=1;
+  badTargetCategory=FLAG;
+  
+
+  weapon1=Nebelwerfer41;
+  maxAngleDif1=35;
+  onlyTargetCategory1=BUILDING INFANTRY SOFTVEH OPENVEH HARDVEH SHIP LARGESHIP DEPLOYED;
+  weaponMainDir1=0 0 1;
+}
+
